# Vessel-Display

./: .gitignore
boat_display_v3/: .claudeignore  .gitignore  BATTERY_MQTT_TOPICS.md  CMAKELISTS_CHANGES.md  CMakeLists.txt  MQTT_MIGRATION.md  README.md  clean.sh  lv_conf.h  mqtt_migration_final.tar  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1  verify_build.sh
boat_display_v3/components/esp32_s3_touch_lcd_4b/: CMakeLists.txt  esp32_s3_touch_lcd_4b.c
boat_display_v3/main/: CMakeLists.txt  alarm.cpp  alarm.h  alarm_overlay.cpp  alarm_overlay.h  boat_data.cpp  boat_data.h  config.h  display_timeout.cpp  display_timeout.h  idf_component.yml  main.cpp  mqtt_client.cpp  mqtt_client.h  mqtt_handler.cpp  numpad.cpp  numpad.h  page_anchor.cpp  page_depth.cpp  page_elec.cpp  page_engine.cpp  page_nav.cpp  page_network.cpp  page_registry.cpp  page_registry.h  page_settings.cpp  page_wind.cpp  settings.cpp  settings.h  signalk.cpp  signalk.h  signalk_paths.h  ui.cpp  ui.h  ui_helpers.cpp  units.h  wifi_config.cpp  wifi_config.h
v1/: README.md  platformio.ini
v1/include/: Arduino_GFX_dev_device.h  config.h  ui.h
v1/src/: boat_data.cpp  lv_conf.h  main.cpp  signalk.cpp  ui.cpp
v2/: README.md  platformio.ini
v2/include/: alarm.h  boat_data.h  config.h  page_registry.h  settings.h  signalk.h  ui.h  units.h
v2/src/: alarm.cpp  lv_conf.h  main.cpp  page_depth.cpp  page_engine.cpp  page_nav.cpp  page_registry.cpp  page_settings.cpp  page_wind.cpp  settings.cpp  ui.cpp  ui_helpers.cpp
